[Starts #162131875] Add a main content providing a brief description of the service being offered

--- a/UI/index.html
+++ b/UI/index.html
@@ -12,5 +12,23 @@
                 <a href="#" class="nav-bg-col">Sign Up</a>
             </div>
         </header>
+        <div class="main">
+            <div class="description">
+                <p>
+                    <strong>
+                        <i>
+                            Spotted any corruption incidence or have a need for 
+                            an issue to be addressed raise? Look no further since 
+                            iReporter is here to help you. 
+                            With our help you can raise a red-flag or call for 
+                            an intervention to a government agency to respond to an issue.
+                        </i>
+                    </strong>
+                </p>
+                <div id="register">
+                    <a href="#">GET STARTED</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
