[Starts #162131875] Add footer to display other relevant contents of the website

--- a/UI/index.html
+++ b/UI/index.html
@@ -30,5 +30,18 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <div class="footer-contact">
+                <p><strong>CONTACT</strong></p>
+                <p class="footer-content">+25471880261</p>
+            </div>
+            <div class="footer-location">
+                <p><strong>LOCATION</strong></p>
+                <p class="footer-content">Membley Park, Ruiru</p>
+            </div>
+            <div class="footer-copyright">
+                <p class="footer-content">&copy; Copyright 2018</p>
+            </div>
+        </footer>
     </body>
 </html>
