[Finishes #162131875] Remove redundant css code

--- a/UI/index.html
+++ b/UI/index.html
@@ -31,15 +31,15 @@
             </div>
         </div>
         <footer>
-            <div class="footer-contact">
+            <div>
                 <p><strong>CONTACT</strong></p>
                 <p class="footer-content">+25471880261</p>
             </div>
-            <div class="footer-location">
+            <div>
                 <p><strong>LOCATION</strong></p>
                 <p class="footer-content">Membley Park, Ruiru</p>
             </div>
-            <div class="footer-copyright">
+            <div>
                 <p class="footer-content">&copy; Copyright 2018</p>
             </div>
         </footer>
