[Finishes #162111755] Enable the upload of an image to a red-flag or an intervention

--- a/UI/create-intervention.html
+++ b/UI/create-intervention.html
@@ -23,6 +23,10 @@
                         <li>
                             <textarea rows="4" cols="50">Enter details of the intervention</textarea>
                         </li>
+                         <li>
+                            <label for="picture">Select Image to Upload: </label>
+                            <input type="file" name="picture" accept="image/*">
+                        </li>
                         <li>
                             <button id="submit">Call for intervention</button>
                         </li>
