--- a/UI/create-redflag.html
+++ b/UI/create-redflag.html
@@ -24,6 +24,10 @@
                             <textarea rows="4" cols="50">Enter details of the red flag</textarea>
                         </li>
                         <li>
+                            <label for="picture">Select Image to Upload: </label>
+                            <input type="file" name="picture" accept="image/*">
+                        </li>
+                        <li>
                             <button id="submit">Report</button>
                         </li>
                     </ul>
