[Finishes #162111805] Enable the upload of a video to a red-flag or intervention

--- a/UI/create-redflag.html
+++ b/UI/create-redflag.html
@@ -28,6 +28,10 @@
                             <input type="file" name="picture" accept="image/*">
                         </li>
                         <li>
+                            <label for="video">Select Video to Upload: </label>
+                            <input type="file" name="video">
+                        </li>
+                        <li>
                             <button id="submit">Report</button>
                         </li>
                     </ul>
