[Starts #162111827] Add get location link

--- a/UI/create-intervention.html
+++ b/UI/create-intervention.html
@@ -32,10 +32,12 @@
                             <input type="file" name="video">
                         </li>
                         <li>
+                            <a href="#" id="geolocation">GET LOCATION</a>
+                        </li>
+                        <li>
                             <button id="submit">Call for intervention</button>
                         </li>
                     </ul>
-                    
                 </form>
             </div>
         </div>
