--- a/UI/create-redflag.html
+++ b/UI/create-redflag.html
@@ -31,11 +31,14 @@
                             <label for="video">Select Video to Upload: </label>
                             <input type="file" name="video">
                         </li>
+                        </li>
+                        <li>
+                            <a href="#" id="geolocation">GET LOCATION</a>
+                        </li>
                         <li>
                             <button id="submit">Report</button>
                         </li>
                     </ul>
-                    
                 </form>
             </div>
         </div>
