--- a/UI/create-redflag.html
+++ b/UI/create-redflag.html
@@ -3,6 +3,7 @@
     <head>
         <title>iReporter</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body class="container">
         <header>
@@ -33,7 +34,8 @@
                         </li>
                         </li>
                         <li>
-                            <a href="#" id="geolocation">GET LOCATION</a>
+                            <a href="#" id="geolocation" onclick="getLocation();">GET LOCATION</a>
+                            <p id="location-view"></p>
                         </li>
                         <li>
                             <button id="submit">Report</button>
