[Bug #162169082] Update references to the styles.css file

--- a/UI/create-intervention.html
+++ b/UI/create-intervention.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>iReporter</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body class="container">
