--- a/UI/create-redflag.html
+++ b/UI/create-redflag.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>iReporter</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body class="container">
