--- a/UI/signup.html
+++ b/UI/signup.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>iReporter</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body class="container">
         <header>
