[Bug #162169082] Change the body elements to match those in the stylesheet

--- a/UI/explore-all-users.html
+++ b/UI/explore-all-users.html
@@ -5,8 +5,9 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <script type="text/javascript" src="js/script.js"></script>
     </head>
-    <body class="container">
-        <header>
+    <body>
+        <div class="container">
+            <header>
             <a href="#" id="logo"><h1>iReporter</h1></a>
             <div class="navigation">
                 <a href="#" class="nav-bg-col">Profile</a>
@@ -45,5 +46,6 @@
                 <p class="footer-content">&copy; Copyright 2018</p>
             </div>
         </footer>
+        </div>
     </body>
 </html>
