--- a/UI/explore-one-timeline.html
+++ b/UI/explore-one-timeline.html
@@ -5,8 +5,9 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <script type="text/javascript" src="js/script.js"></script>
     </head>
-    <body class="container">
-        <header>
+    <body>
+        <div class="container">
+             <header>
             <a href="#" id="logo"><h1>iReporter</h1></a>
             <div class="navigation">
                 <input id="search-timeline" type="text" name="search" placeholder="Enter a username...">
@@ -14,7 +15,7 @@
                 <a href="#" class="nav-bg-col">Sign Out</a>
             </div>
         </header>
-        <div class="main">
+        <main>
             <ul class="timeline">
                 <li>
                     <h1>TITLE OF THE REDFLAG</h1>
@@ -30,7 +31,7 @@
                 </li>
             </ul>
             <hr>
-        </div>
+        </main>
         <footer>
             <div>
                 <p><strong>CONTACT</strong></p>
@@ -44,5 +45,6 @@
                 <p class="footer-content">&copy; Copyright 2018</p>
             </div>
         </footer>
+        </div>
     </body>
 </html>
