--- a/UI/index.html
+++ b/UI/index.html
@@ -4,44 +4,46 @@
         <title>iReporter</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
-    <body class="container">
-        <header>
-            <a href="#" id="logo"><h1>iReporter</h1></a>
-            <div class="navigation">
-                <a href="#" class="nav-bg-col">Sign In</a>
-                <a href="#" class="nav-bg-col">Sign Up</a>
-            </div>
-        </header>
-        <div class="main">
-            <div class="description">
-                <p>
-                    <strong>
-                        <i>
-                            Spotted any corruption incidence or have a need for 
-                            an issue to be addressed raise? Look no further since 
-                            iReporter is here to help you. 
-                            With our help you can raise a red-flag or call for 
-                            an intervention to a government agency to respond to an issue.
-                        </i>
-                    </strong>
-                </p>
-                <div id="register">
-                    <a href="#">GET STARTED</a>
+    <body>
+        <div class="container">
+            <header>
+                <a href="#" id="logo"><h1>iReporter</h1></a>
+                <div class="navigation">
+                    <a href="#" class="nav-bg-col">Sign In</a>
+                    <a href="#" class="nav-bg-col">Sign Up</a>
                 </div>
-            </div>
+            </header>
+            <main>
+                <div class="description">
+                    <p>
+                        <strong>
+                            <i>
+                                Spotted any corruption incidence or have a need for 
+                                an issue to be addressed raise? Look no further since 
+                                iReporter is here to help you. 
+                                With our help you can raise a red-flag or call for 
+                                an intervention to a government agency to respond to an issue.
+                            </i>
+                        </strong>
+                    </p>
+                    <div id="register">
+                        <a href="#">GET STARTED</a>
+                    </div>
+                </div>
+            </main>
+            <footer>
+                <div>
+                    <p><strong>CONTACT</strong></p>
+                    <p class="footer-content">+25471880261</p>
+                </div>
+                <div>
+                    <p><strong>LOCATION</strong></p>
+                    <p class="footer-content">Membley Park, Ruiru</p>
+                </div>
+                <div>
+                    <p class="footer-content">&copy; Copyright 2018</p>
+                </div>
+            </footer>
         </div>
-        <footer>
-            <div>
-                <p><strong>CONTACT</strong></p>
-                <p class="footer-content">+25471880261</p>
-            </div>
-            <div>
-                <p><strong>LOCATION</strong></p>
-                <p class="footer-content">Membley Park, Ruiru</p>
-            </div>
-            <div>
-                <p class="footer-content">&copy; Copyright 2018</p>
-            </div>
-        </footer>
     </body>
 </html>
