--- a/UI/redflag-timeline.html
+++ b/UI/redflag-timeline.html
@@ -5,15 +5,16 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <script type="text/javascript" src="js/script.js"></script>
     </head>
-    <body class="container">
-        <header>
+    <body>
+        <div class="container">
+            <header>
             <a href="#" id="logo"><h1>iReporter</h1></a>
             <div class="navigation">
                 <a href="#" class="nav-bg-col">Profile</a>
                 <a href="#" class="nav-bg-col">Sign Out</a>
             </div>
         </header>
-        <div class="main">
+        <main>
             <ul class="timeline">
                 <li>
                     <h1>TITLE OF THE REDFLAG</h1>
@@ -31,7 +32,7 @@
                     <a href="#" id="submit">DELETE</a>
                 </li>
             </ul>
-        </div>
+        </main>
         <footer>
             <div>
                 <p><strong>CONTACT</strong></p>
@@ -45,5 +46,6 @@
                 <p class="footer-content">&copy; Copyright 2018</p>
             </div>
         </footer>
+        </div>
     </body>
 </html>
