--- a/UI/report-status.html
+++ b/UI/report-status.html
@@ -5,15 +5,16 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <script type="text/javascript" src="js/script.js"></script>
     </head>
-    <body class="container">
-        <header>
+    <body>
+        <div class="container">
+            <header>
             <a href="#" id="logo"><h1>iReporter</h1></a>
             <div class="navigation">
                 <a href="#" class="nav-bg-col">Profile</a>
                 <a href="#" class="nav-bg-col">Sign Out</a>
             </div>
         </header>
-        <div class="main">
+        <main>
             <div id="iroperter-statuses">
                 <div class="ireporter-child-status" id="report-number">
                     <p>Report Number: <span>#3</span></p>
@@ -30,7 +31,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </main>
         <footer>
             <div>
                 <p><strong>CONTACT</strong></p>
@@ -44,5 +45,6 @@
                 <p class="footer-content">&copy; Copyright 2018</p>
             </div>
         </footer>
+        </div>
     </body>
 </html>
