--- a/UI/signin.html
+++ b/UI/signin.html
@@ -4,15 +4,16 @@
         <title>iReporter</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
-    <body class="container">
-        <header>
+    <body>
+        <div class="container">
+            <header>
             <a href="#" id="logo"><h1>iReporter</h1></a>
             <div class="navigation">
                 <a href="#" class="nav-bg-col">Sign In</a>
                 <a href="#" class="nav-bg-col">Sign Up</a>
             </div>
         </header>
-        <div class="main">
+        <main>
             <div class="sign-up-form">
                 <p><strong>Sign In</strong></p>
                 <form>
@@ -35,7 +36,7 @@
                     
                 </form>
             </div>
-        </div>
+        </main>
         <footer>
             <div>
                 <p><strong>CONTACT</strong></p>
@@ -49,5 +50,6 @@
                 <p class="footer-content">&copy; Copyright 2018</p>
             </div>
         </footer>
+        </div>
     </body>
 </html>
