[Bug #162169082] Change reference to the navigation links to be descriptive and style

--- a/UI/index.html
+++ b/UI/index.html
@@ -8,26 +8,28 @@
         <div class="container">
             <header>
                 <a href="#" id="logo"><h1>iReporter</h1></a>
-                <div class="navigation">
-                    <a href="#" class="nav-bg-col">Sign In</a>
-                    <a href="#" class="nav-bg-col">Sign Up</a>
+                <div class="navigation-links">
+                    <a href="#" class="btn-bg-col">Sign In</a>
+                    <a href="#" class="btn-bg-col">Sign Up</a>
                 </div>
             </header>
             <main>
                 <div class="description">
                     <p>
                         <strong>
-                            <i>
+                            <em>
                                 Spotted any corruption incidence or have a need for 
                                 an issue to be addressed raise? Look no further since 
                                 iReporter is here to help you. 
                                 With our help you can raise a red-flag or call for 
                                 an intervention to a government agency to respond to an issue.
-                            </i>
+                            </em>
                         </strong>
                     </p>
-                    <div id="register">
-                        <a href="#">GET STARTED</a>
+                    <div class="navigation-links" id="register">
+                        <a href="#">
+                            <strong>GET STARTED</strong>
+                        </a>
                     </div>
                 </div>
             </main>
