[Bug #162169082] Update the links in the index page to navigate one to the desired location

--- a/UI/index.html
+++ b/UI/index.html
@@ -7,10 +7,10 @@
     <body>
         <div class="container">
             <header>
-                <a href="#" id="logo"><h1>iReporter</h1></a>
+                <a href="index.html" id="logo"><h1>iReporter</h1></a>
                 <div class="navigation-links">
-                    <a href="#" class="btn-bg-col">Sign In</a>
-                    <a href="#" class="btn-bg-col">Sign Up</a>
+                    <a href="signin.html" class="btn-bg-col">Sign In</a>
+                    <a href="signup.html" class="btn-bg-col">Sign Up</a>
                 </div>
             </header>
             <main>
@@ -27,7 +27,7 @@
                         </strong>
                     </p>
                     <div class="navigation-links" id="register">
-                        <a href="#">
+                        <a href="signup.html">
                             <strong>GET STARTED</strong>
                         </a>
                     </div>
