--- a/UI/signup.html
+++ b/UI/signup.html
@@ -7,17 +7,17 @@
     <body>
        <div class="container">
          <header>
-            <a href="#" id="logo"><h1>iReporter</h1></a>
-            <div class="navigation">
-                <a href="#" class="nav-bg-col">Sign In</a>
-                <a href="#" class="nav-bg-col">Sign Up</a>
+            <a href="index.html" id="logo"><h1>iReporter</h1></a>
+            <div class="navigation-links">
+                <a href="signin.html" class="btn-bg-col">Sign In</a>
+                <a href="signup.html" class="btn-bg-col">Sign Up</a>
             </div>
         </header>
         <main>
             <div class="sign-up-form">
                 <p><strong>Sign Up</strong></p>
                 <form>
-                    <ul class="flex-outer">
+                    <ul>
                         <li>
                             <label for="username">Username:</label>
                             <input type="text" id="username" name=username placeholder="Enter a username" class="field-size">
