--- a/UI/signup.html
+++ b/UI/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>iReporter</title>
+        <title>iReporter | Sign Up</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
@@ -14,32 +14,17 @@
             </div>
         </header>
         <main>
-            <div class="sign-up-form">
-                <p><strong>Sign Up</strong></p>
-                <form>
-                    <ul>
-                        <li>
-                            <label for="username">Username:</label>
-                            <input type="text" id="username" name=username placeholder="Enter a username" class="field-size">
-                        </li>
-                        <li>
-                            <label for="email">Email:</label>
-                            <input type="email" id="email" name="email" placeholder="Enter your email address" class="field-size">
-                        </li>
-                        <li>
-                            <label for="password1">Password:</label>
-                            <input type="password" id="password1" name="password" placeholder="Enter a password" class="field-size">
-                        </li>
-                        <li>
-                            <label for="password2">Re-type Password:</label>
-                            <input type="password" id="password2" name="password" placeholder="Re-type the password" class="field-size">
-                        </li>
-                        <li>
-                            <button id="submit">Submit</button>
-                        </li>
-                    </ul>
-                    
-                </form>
+            <div class="contact-wrapper">
+                <div class="contact-form">
+                    <p id="contact-form-label"><strong>Sign Up</strong></p>
+                    <form action="signin.html" method="post">
+                        <p><input type="text" id="username" placeholder="Enter a username"></p>
+                        <p><input type="email" id="email" placeholder="Enter your email address"></p>
+                        <p><input type="password" id="password1" placeholder="Enter a password"></p>
+                        <p><input type="password" id="password2" placeholder="Re-enter the password"></p>
+                        <p><input type="submit" value="Sign Up" id="submit"></p>
+                    </form>
+                </div>
             </div>
         </main>
         <footer>
