[Bug #162169082] Direct a user to his/her timeline on loggin in

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>iReporter</title>
+        <title>iReporter | Sign In</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
@@ -17,7 +17,7 @@
             <div class="contact-wrapper">
                 <div class="contact-form">
                     <p id="contact-form-label"><strong>Sign In</strong></p>
-                    <form action="user-profile.html" method="post">
+                    <form action="user-timeline.html" method="post">
                         <p><input type="text" id="username" placeholder="Enter your username"></p>
                         <p><input type="password" id="password1" placeholder="Enter your password"></p>
                         <p><input type="checkbox" name="remember-me"><span id="remember-me"><em>Remember Me</em></span></p>
