[Bug #162169082] Implement flex box on the user's timeline and make reference to elements descriptive

--- a/UI/user-timeline.html
+++ b/UI/user-timeline.html
@@ -16,20 +16,11 @@
             </div>
         </header>
         <main>
-            <ul class="timeline">
-                <li>
-                    <h1>TITLE OF THE INCIDENCE</h1>
-                </li>
-                <li>
-                    <h2>THIS INCIDENCE ENTAILS...CONTAINS THE DESCRIPTION OF THE INCIDENCE</h2>
-                </li>
-                <li>
-                    <img src="" id="img" style="width: 500px; height: 100px;"/>
-                </li>
-                <li>
-                     <video width="500px" height="100px" controls></video>
-                </li>
-            </ul>
+            <div class="timeline">
+                <p id="timeline-label"><strong>TITLE OF THE INCIDENCE</strong></p>
+                <p id="timeline-content">THIS INCIDENCE ENTAILS...CONTAINS THE DESCRIPTION OF THE INCIDENCE</p>
+                <img src="img/maroon-1.jpg" id="timeline-img" />
+            </div>
         </main>
         <footer>
             <div>
