[Bug #162169082] Add a button to delete a raised report

--- a/UI/user-timeline.html
+++ b/UI/user-timeline.html
@@ -17,9 +17,10 @@
         </header>
         <main>
             <div class="timeline">
-                <p id="timeline-label"><strong>TITLE OF THE INCIDENCE</strong></p>
-                <p id="timeline-content">THIS INCIDENCE ENTAILS...CONTAINS THE DESCRIPTION OF THE INCIDENCE</p>
-                <img src="img/maroon-1.jpg" id="timeline-img" />
+                <p id="timeline-label"><strong>TITLE OF THE REPORT</strong></p>
+                <p id="timeline-content">THIS REPORT ENTAILS...CONTAINS THE DESCRIPTION OF THE REPORT</p>
+                <p><img src="img/maroon-1.jpg" id="timeline-img" /></p>
+                <button type="submit" id="submit" class="timeline-remove-btn">DELETE</button>
             </div>
         </main>
         <footer>
