--- a/UI/create-report.html
+++ b/UI/create-report.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>iReporter | Red Flag</title>
+        <title>iReporter | Report</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
         <div class="container">
             <header>
-            <a href="create-report.html" id="logo"><h1>iReporter</h1></a>
-            <div class="navigation-links">
-                <a href="create-redflag.html" class="btn-bg-col">Red Flag</a>
-                <a href="create-intervention.html" class="btn-bg-col">Intervention</a>
-                <a href="index.html" class="btn-bg-col">Sign Out</a>
-            </div>
-        </header>
+                <a href="create-report.html" id="logo"><h1>iReporter</h1></a>
+                <div class="navigation-links">
+                    <a href="user-timeline.html" class="btn-bg-col">Timeline</a>
+                    <a href="index.html" class="btn-bg-col">Sign Out</a>
+                </div>
+            </header>
         <main>
             <div class="contact-wrapper">
                 <div class="contact-form">
