--- a/UI/user-timeline.html
+++ b/UI/user-timeline.html
@@ -10,8 +10,7 @@
             <header>
             <a href="user-timeline.html" id="logo"><h1>iReporter</h1></a>
             <div class="navigation-links">
-                <a href="create-redflag.html" class="btn-bg-col">Red Flag</a>
-                <a href="create-intervention.html" class="btn-bg-col">Intervention</a>
+                <a href="create-report.html" class="btn-bg-col">Report</a>
                 <a href="index.html" class="btn-bg-col">Sign Out</a>
             </div>
         </header>
