[Bug #162169082] Re-design the statistics page using flex-box

--- a/UI/ireporter-statistics.html
+++ b/UI/ireporter-statistics.html
@@ -15,21 +15,32 @@
             </div>
         </header>
         <main>
-            <div class="iroperter-statistics">
-                <div class="issue-statistic">
-                    <p>Resolved</p>
-                    <p>Red-flag: <span id="">5</span></p>
-                    <p>Intervention: <span id="">2</span></p>
-                </div>
-                <div class="issue-statistic">
-                    <p>Un-resolved</p>
-                    <p>Red-flag: <span id="">8</span></p>
-                    <p>Intervention: <span id="">1</span></p>
-                </div>
-                <div class="issue-statistic">
-                    <p>Rejected</p>
-                    <p>Red-flag: <span id="">6</span></p>
-                    <p>Intervention: <span id="">0</span></p>
+            <div class="iroperter-statistics-wrapper">
+                <div class="iroperter-statistics-row">
+                    <div class="ireporter-statistic">
+                        <p class="ireporter-statistic-title">Resolved Red-Flag(s)</p>
+                        <p>5</p>
+                    </div>
+                    <div class="ireporter-statistic">
+                        <p class="ireporter-statistic-title">Resolved Intervention(s)</p>
+                        <p>8</p>
+                    </div>
+                    <div class="ireporter-statistic">
+                        <p class="ireporter-statistic-title">Un-Resolved Red-Flag(s)</p>
+                        <p>0</p>
+                    </div>
+                    <div class="ireporter-statistic">
+                        <p class="ireporter-statistic-title">Un-Resolved Intervention(s)</p>
+                        <p>2</p>
+                    </div>
+                    <div class="ireporter-statistic">
+                        <p class="ireporter-statistic-title">Rejected Red-Flag(s)</p>
+                        <p>10</p>
+                    </div>
+                    <div class="ireporter-statistic">
+                        <p class="ireporter-statistic-title">Rejected Intervention(s)</p>
+                        <p>7</p>
+                    </div>
                 </div>
             </div>
         </main>
