--- a/UI/create-report.html
+++ b/UI/create-report.html
@@ -11,6 +11,7 @@
                 <a href="create-report.html" id="logo"><h1>iReporter</h1></a>
                 <div class="navigation-links">
                     <a href="user-timeline.html" class="btn-bg-col">Timeline</a>
+                    <a href="ireporter-statistics.html" class="btn-bg-col">Statistics</a>
                     <a href="index.html" class="btn-bg-col">Sign Out</a>
                 </div>
             </header>
