--- a/UI/ireporter-statistics.html
+++ b/UI/ireporter-statistics.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>iReporter</title>
+        <title>iReporter | Statistics</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
         <div class="container">
             <header>
-            <a href="#" id="logo"><h1>iReporter</h1></a>
-            <div class="navigation">
-                <a href="#" class="nav-bg-col">Profile</a>
-                <a href="#" class="nav-bg-col">Sign Out</a>
+            <a href="ireporter-statistics.html" id="logo"><h1>iReporter</h1></a>
+            <div class="navigation-links">
+                <a href="create-report.html" class="btn-bg-col">Report</a>
+                <a href="user-timeline.html" class="btn-bg-col">Timeline</a>
+                <a href="index.html" class="btn-bg-col">Sign Out</a>
             </div>
         </header>
         <main>
