--- a/UI/user-timeline.html
+++ b/UI/user-timeline.html
@@ -11,6 +11,7 @@
             <a href="user-timeline.html" id="logo"><h1>iReporter</h1></a>
             <div class="navigation-links">
                 <a href="create-report.html" class="btn-bg-col">Report</a>
+                 <a href="ireporter-statistics.html" class="btn-bg-col">Statistics</a>
                 <a href="index.html" class="btn-bg-col">Sign Out</a>
             </div>
         </header>
