--- a/UI/explore.html
+++ b/UI/explore.html
@@ -8,10 +8,11 @@
     <body>
         <div class="container">
             <header>
-            <a href="#" id="logo"><h1>iReporter</h1></a>
-            <div class="navigation">
-                <a href="#" class="nav-bg-col">Profile</a>
-                <a href="#" class="nav-bg-col">Sign Out</a>
+            <a href="explore.html" id="logo"><h1>iReporter</h1></a>
+            <div class="navigation-links">
+                <a href="explore.html" class="btn-bg-col">Admin</a>
+                 <a href="ireporter-statistics.html" class="btn-bg-col">Statistics</a>
+                <a href="index.html" class="btn-bg-col">Sign Out</a>
             </div>
         </header>
         <main>
