[Bug #162169082] Add link to explore page

--- a/UI/ireporter-statistics.html
+++ b/UI/ireporter-statistics.html
@@ -12,6 +12,7 @@
             <div class="navigation-links">
                 <a href="create-report.html" class="btn-bg-col">Report</a>
                 <a href="user-timeline.html" class="btn-bg-col">Timeline</a>
+                <a href="explore.html" class="btn-bg-col">Explore</a>
                 <a href="index.html" class="btn-bg-col">Sign Out</a>
             </div>
         </header>
