[Bug #162169082] Include draft and under investigation to select element

--- a/UI/explore.html
+++ b/UI/explore.html
@@ -23,9 +23,10 @@
                 <p><img src="img/maroon-1.jpg" id="timeline-img" /></p>
                 <p><strong>Change Report Status:<strong></p>
                 <select id="change-status">
-                        <option value="resolved">Resolved</option>
-                        <option value="resolved">Resolved</option>
-                        <option value="rejected">Rejected</option>
+                    <option value="resolved">Resolved</option>
+                    <option value="draft">Draft</option>
+                    <option value="under-investigation">Under Investigation</option>
+                    <option value="rejected">Rejected</option>
                 </select>
             </div>
             <hr>
