[Bug #162180594] Remove method parameter on form element

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -17,7 +17,7 @@
             <div class="contact-wrapper">
                 <div class="contact-form">
                     <p id="contact-form-label"><strong>Sign Up</strong></p>
-                    <form action="signin.html" method="post">
+                    <form action="signin.html">
                         <p><input type="text" id="username" placeholder="Enter a username"></p>
                         <p><input type="email" id="email" placeholder="Enter your email address"></p>
                         <p><input type="password" id="password1" placeholder="Enter a password"></p>
