--- a/UI/signin.html
+++ b/UI/signin.html
@@ -17,7 +17,7 @@
             <div class="contact-wrapper">
                 <div class="contact-form">
                     <p id="contact-form-label"><strong>Sign In</strong></p>
-                    <form action="user-timeline.html" method="post">
+                    <form action="user-timeline.html">
                         <p><input type="text" id="username" placeholder="Enter your username"></p>
                         <p><input type="password" id="password1" placeholder="Enter your password"></p>
                         <p><input type="checkbox" name="remember-me"><span id="remember-me"><em>Remember Me</em></span></p>
