[Finishes #162180754] Change the website theme

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -9,21 +9,24 @@
          <header>
             <a href="index.html" id="logo"><h1>iReporter</h1></a>
             <div class="navigation-links">
-                <a href="signin.html" class="btn-bg-col">Sign In</a>
-                <a href="signup.html" class="btn-bg-col">Sign Up</a>
+                <div class="nav-link-btn">
+                    <a href="signin.html">Sign In</a>
+                </div>
             </div>
         </header>
         <main>
-            <div class="contact-wrapper">
-                <div class="contact-form">
-                    <p id="contact-form-label"><strong>Sign Up</strong></p>
+            <div class="main-wrapper">
+                <div class="main-inner">
+                    <p id="main-inner-label"><strong>Sign Up</strong></p>
+                </div>
+                <div class="main-inner">
                     <form action="signin.html">
                         <p><input type="text" id="username" placeholder="Enter a username"></p>
                         <p><input type="email" id="email" placeholder="Enter your email address"></p>
                         <p><input type="password" id="password1" placeholder="Enter a password"></p>
                         <p><input type="password" id="password2" placeholder="Re-enter the password"></p>
                         <p><input type="submit" value="Sign Up" id="submit"></p>
-                    </form>
+                </form>
                 </div>
             </div>
         </main>
