--- a/UI/create-report.html
+++ b/UI/create-report.html
@@ -10,29 +10,59 @@
             <header>
                 <a href="create-report.html" id="logo"><h1>iReporter</h1></a>
                 <div class="navigation-links">
-                    <a href="user-timeline.html" class="btn-bg-col">Timeline</a>
-                    <a href="ireporter-statistics.html" class="btn-bg-col">Statistics</a>
-                    <a href="index.html" class="btn-bg-col">Sign Out</a>
+                    <div class="nav-link-btn">
+                        <a href="user-timeline.html">Timeline</a>
+                    </div>
+                    <div class="nav-link-btn">
+                        <a href="ireporter-statistics.html">Statistics</a>
+                    </div>
+                    <div class="nav-link-btn">
+                        <a href="index.html">Sign Out</a>
+                    </div>
                 </div>
             </header>
         <main>
-            <div class="contact-wrapper">
-                <div class="contact-form">
-                    <p id="contact-form-label"><strong>Choose the Kind of Report</strong></p>
-                    <select id="choose-report">
-                        <option value="red-flag">Red Flag</option>
-                        <option value="intervention">Intervention</option>
-                    </select>
-                    <form action="create-report.html" method="post">
-                        <p><input type="text" id="report-title" placeholder="Enter title of the red flag"></p>
-                        <p><textarea id="report-contents">Enter details of the red flag</textarea></p>
-                        <p><label for="picture">Select Image to Upload: </label></p>
-                        <p><input type="file" name="picture" accept="image/*"></p>
-                        <p><label for="video">Select Video to Upload: </label></p>
-                        <p><input type="file" name="video"></p>
-                        <p><a href="#" id="geolocation" onclick="getLocation();">GET LOCATION</a></p>
-                        <p id="location-view"></p>
-                        <p><input type="submit" value="Submit" id="submit"></p>
+            <div class="create-report">
+                <div class="main-inner">
+                    <p id="create-report-label"><strong>Create Your Report:</strong></p>
+                </div>
+                <div class="main-inner">
+                    <form action="create-report.html">
+                        <div class="form-inner">
+                            <div class="form-inner-content">
+                                <select id="choose-report-type">
+                                    <option value="red-flag">Red Flag</option>
+                                    <option value="intervention">Intervention</option>
+                                </select>
+                            </div>
+                            <div class="form-inner-content">
+                                <textarea id="report-detail" class="report-content">Enter details of the report</textarea>
+                            </div>
+                            <div class="form-inner-content">
+                                <input type="text" placeholder="Enter the Address" class="report-content">
+                            </div>
+                            <div class="form-inner-content">
+                                <input type="text" placeholder="(Latitude)" class="report-content" id="latitude" readonly>
+                            </div>
+                            <div class="form-inner-content">
+                                <input type="text" placeholder="(Longitude)" class="report-content" id="longitude" readonly>
+                            </div>
+                            <div class="form-inner-content">
+                                <div class="file-upload-outer">
+                                    <button class="file-upload-btn">Upload Image</button>
+                                    <input type="file" name="myfile" />
+                                </div>
+                            </div>
+                            <div class="form-inner-content">
+                                <div class="file-upload-outer">
+                                    <button class="file-upload-btn">Upload Video</button>
+                                    <input type="file" name="myfile" />
+                                </div>
+                            </div>
+                            <div class="form-inner-content">
+                                <p><input type="submit" value="Submit" id="submit"></p>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
