--- a/UI/explore.html
+++ b/UI/explore.html
@@ -10,9 +10,15 @@
             <header>
             <a href="explore.html" id="logo"><h1>iReporter</h1></a>
             <div class="navigation-links">
-                <a href="explore.html" class="btn-bg-col">Admin</a>
-                 <a href="ireporter-statistics.html" class="btn-bg-col">Statistics</a>
-                <a href="index.html" class="btn-bg-col">Sign Out</a>
+                <div class="nav-link-btn">
+                     <a href="explore.html">Admin</a>
+                </div>
+                <div class="nav-link-btn">
+                    <a href="ireporter-statistics.html">Statistics</a>
+                </div>
+                <div class="nav-link-btn">
+                    <a href="index.html">Sign Out</a>
+                </div>
             </div>
         </header>
         <main>
