--- a/UI/index.html
+++ b/UI/index.html
@@ -9,8 +9,12 @@
             <header>
                 <a href="index.html" id="logo"><h1>iReporter</h1></a>
                 <div class="navigation-links">
-                    <a href="signin.html" class="btn-bg-col">Sign In</a>
-                    <a href="signup.html" class="btn-bg-col">Sign Up</a>
+                    <div class="nav-link-btn">
+                         <a href="signin.html">Sign In</a>
+                    </div>
+                    <div class="nav-link-btn">
+                        <a href="signup.html">Sign Up</a>
+                    </div>
                 </div>
             </header>
             <main>
@@ -26,7 +30,7 @@
                             </em>
                         </strong>
                     </p>
-                    <div class="navigation-links" id="register">
+                    <div id="register">
                         <a href="signup.html">
                             <strong>GET STARTED</strong>
                         </a>
