--- a/UI/signin.html
+++ b/UI/signin.html
@@ -9,18 +9,20 @@
             <header>
             <a href="index.html" id="logo"><h1>iReporter</h1></a>
             <div class="navigation-links">
-                <a href="signin.html" class="btn-bg-col">Sign In</a>
-                <a href="signup.html" class="btn-bg-col">Sign Up</a>
+                <div class="nav-link-btn">
+                    <a href="signup.html">Sign Up</a>
+                </div>
             </div>
         </header>
         <main>
-            <div class="contact-wrapper">
-                <div class="contact-form">
-                    <p id="contact-form-label"><strong>Sign In</strong></p>
+            <div class="main-wrapper">
+                <div class="main-inner">
+                    <p id="main-inner-label"><strong>Sign In</strong></p>
+                </div>
+                <div class="main-inner">
                     <form action="user-timeline.html">
                         <p><input type="text" id="username" placeholder="Enter your username"></p>
                         <p><input type="password" id="password1" placeholder="Enter your password"></p>
-                        <p><input type="checkbox" name="remember-me"><span id="remember-me"><em>Remember Me</em></span></p>
                         <p><input type="submit" value="Sign In" id="submit"></p>
                     </form>
                 </div>
