[Finishes #162182142] Re-direct a user to the home page on sign in

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -20,7 +20,7 @@
                     <p id="main-inner-label"><strong>Sign In</strong></p>
                 </div>
                 <div class="main-inner">
-                    <form action="user-timeline.html">
+                    <form action="home.html">
                         <p><input type="text" id="username" placeholder="Enter your username"></p>
                         <p><input type="password" id="password1" placeholder="Enter your password"></p>
                         <p><input type="submit" value="Sign In" id="submit"></p>
