--- a/UI/home.html
+++ b/UI/home.html
@@ -8,8 +8,11 @@
     <body>
         <div class="container">
             <header>
-            <a href="user-timeline.html" id="logo"><h1>iReporter</h1></a>
+            <a href="home.html" id="logo"><h1>iReporter</h1></a>
             <div class="navigation-links">
+                <div class="nav-link-btn">
+                    <a href="user-profile.html">Profile</a>
+                </div>
                 <div class="nav-link-btn">
                     <a href="create-report.html">Report</a>
                 </div>
