--- a/UI/user-profile.html
+++ b/UI/user-profile.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>iReporter | Timeline</title>
+        <title>iReporter | Profile</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
         <div class="container">
             <header>
-            <a href="user-timeline.html" id="logo"><h1>iReporter</h1></a>
+            <a href="home.html" id="logo"><h1>iReporter</h1></a>
             <div class="navigation-links">
                 <div class="nav-link-btn">
-                    <a href="create-report.html">Report</a>
+                    <a href="home.html">Home</a>
                 </div>
                 <div class="nav-link-btn">
-                    <a href="ireporter-statistics.html">Statistics</a>
+                    <a href="create-report.html">Report</a>
                 </div>
                 <div class="nav-link-btn">
                      <a href="index.html">Sign Out</a>
