[Starts #162183113] Add the status of the reports to the user profile page and the home page

--- a/UI/home.html
+++ b/UI/home.html
@@ -33,7 +33,10 @@
             <div class="main-search">
                 <div class="main-search-content">
                     <div class="main-search-content-type">
-                        <p class="home-report-type">RED-FLAG</p>
+                        <div class="home-report-type">
+                            <p>RED-FLAG</p>
+                            <p>STATUS: UNRESOLVED</p>
+                        </div>
                     </div>
                     <div class="main-search-content-description">
                         <p class="home-report-description">
@@ -56,7 +59,10 @@
                 </div>  
                  <div class="main-search-content">
                     <div class="main-search-content-type">
-                        <p class="home-report-type">INTERVENTION</p>
+                        <div class="home-report-type">
+                            <p>INTERVENTION</p>
+                            <p>STATUS: ACCEPTED</p>
+                        </div>
                     </div>
                     <div class="main-search-content-description">
                         <p>
