--- a/UI/user-profile.html
+++ b/UI/user-profile.html
@@ -22,12 +22,29 @@
             </div>
         </header>
         <main>
-            <div class="timeline">
-                <p id="timeline-label"><strong>TITLE OF THE REPORT</strong></p>
-                <p id="timeline-content">THIS REPORT ENTAILS...CONTAINS THE DESCRIPTION OF THE REPORT</p>
-                <p><img src="img/maroon-1.jpg" id="timeline-img" /></p>
-                <button type="submit" id="submit" class="timeline-remove-btn">DELETE</button>
+            <div class="report-stastics-content">
+                <div class="report-statistics">
+                    <div class="report-status-resolved">R:1</div>
+                    <div class="report-status-resolved">I:3</div>
+                    <div class="report-status-unresolved">R:4</div>
+                    <div class="report-status-unresolved">I:0</div>
+                    <div class="report-status-rejected">R:10</div>
+                    <div class="report-status-rejected">I:6</div>
+		        </div>
             </div>
+            <div class="report-statistics-labels">
+                <div class="report-label">
+                    <p><strong>GREEN - ACCEPTED</strong></p>
+                </div>
+                <div class="report-label">
+                    <p><strong>ORANGE - UNRESOLVED</strong></p>
+                </div>
+                <div class="report-label">
+                    <p><strong>RED - REJECTED</strong></p>
+                </div>
+            </div>
+            
+
         </main>
         <footer>
             <div>
