[Finishes #162183113] Add a user report to the profile page

--- a/UI/user-profile.html
+++ b/UI/user-profile.html
@@ -43,7 +43,83 @@
                     <p><strong>RED - REJECTED</strong></p>
                 </div>
             </div>
-            
+            <div class="main-search">
+                <div class="main-search-content">
+                    <div class="main-search-content-type">
+                        <div class="home-report-type">
+                            <p>RED-FLAG</p>
+                            <p>STATUS: UNRESOLVED</p>
+                        </div>
+                    </div>
+                    <div class="main-search-content-description">
+                        <p class="home-report-description">
+                            A traffic officer was today spotted taking bribes from matatu drivers today at the Kenyatta 
+                            University bus stop. He appeared not to be shaken by the recent introduction of the Michuki rules 
+                            with the said matatu drivers also flouting the rules.
+                        </p>
+                    </div>
+                    <div class="main-search-content-options">
+                        <div class="main-search-image">
+                            <button class="main-search-btn">IMAGE</button>
+                        </div>
+                        <div class="main-search-video">
+                            <button class="main-search-btn">VIDEO</button>
+                        </div>
+                        <div class="main-search-location">
+                            <button class="main-search-btn">LOCATION</button>
+                        </div>
+                    </div>
+                    <div class="profile-post-modify">
+                        <div class="profile-post-edit">
+                            <button class="profile-post-edit-btn">EDIT POST</button>
+                        </div>
+                        <div class="profile-post-location">
+                            <button class="profile-post-location-btn">UPDATE LOCATION</button>
+                        </div>
+                        <div class="profile-post-delete">
+                            <button class="profile-post-delete-btn">DELETE POST</button>
+                        </div>
+                    </div>
+                </div>  
+                 <div class="main-search-content">
+                    <div class="main-search-content-type">
+                        <div class="home-report-type">
+                            <p>INTERVENTION</p>
+                            <p>STATUS: ACCEPTED</p>
+                        </div>
+                    </div>
+                    <div class="main-search-content-description">
+                        <p>
+                            There has been reported incidences of electricity power cuts at Kahawa West. Residents 
+                            have been left wondering where the local MCA has been too since raising the issue. Power 
+                            should be restored back to curb the recent cases of insecurity which have been on the rise 
+                            especially in the night.
+                        </p>
+                    </div>
+                    <div class="main-search-content-options">
+                        <div class="main-search-image">
+                            <button class="main-search-btn">IMAGE</button>
+                        </div>
+                        <div class="main-search-video">
+                            <button class="main-search-btn">VIDEO</button>
+                        </div>
+                        <div class="main-search-location">
+                            <button class="main-search-btn">LOCATION</button>
+                        </div>
+                    </div>
+                    <div class="profile-post-modify">
+                        <div class="profile-post-edit">
+                            <button class="profile-post-edit-btn">EDIT POST</button>
+                        </div>
+                        <div class="profile-post-location">
+                            <button class="profile-post-location-btn">UPDATE LOCATION</button>
+                        </div>
+                        <div class="profile-post-delete">
+                            <button class="profile-post-delete-btn">DELETE POST</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </main>
         <footer>
