[Starts #162189198] Move the login and registration form to one page

--- a/UI/admin-registration.html
+++ b/UI/admin-registration.html
@@ -15,18 +15,37 @@
             </div>
         </header>
         <main>
-            <div class="main-wrapper">
-                <div class="main-inner">
-                    <p id="main-inner-label"><strong>Adminstrator Sign Up</strong></p>
+            <div class="admin-registration">
+                <div class="admin-login">
+                    <div id="admin-login-form" class="main-wrapper">
+                        <div class="main-inner">
+                            <p id="main-inner-label"><strong>Administrator Sign In</strong></p>
+                        </div>
+                        <div class="main-inner">
+                            <form action="home.html">
+                                <p><input type="text" id="username" placeholder="Enter your username"></p>
+                                <p><input type="password" id="password1" placeholder="Enter your password"></p>
+                                <p><input type="submit" value="Sign In" id="submit"></p>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-                <div class="main-inner">
-                    <form action="signin.html">
-                        <p><input type="text" id="username" placeholder="Enter a username"></p>
-                        <p><input type="email" id="email" placeholder="Enter your email address"></p>
-                        <p><input type="password" id="password1" placeholder="Enter a password"></p>
-                        <p><input type="password" id="password2" placeholder="Re-enter the password"></p>
-                        <p><input type="submit" value="Sign Up" id="submit"></p>
-                </form>
+                <div id="vertical-line"></div>
+                <div class="admin-signup">
+                    <div class="main-wrapper">
+                        <div class="main-inner">
+                            <p id="main-inner-label"><strong>Administrator Sign Up</strong></p>
+                        </div>
+                        <div class="main-inner">
+                            <form action="home.html">
+                                <p><input type="text" id="username" placeholder="Enter your username"></p>
+                                <p><input type="email" id="email" placeholder="Enter your email address"></p>
+                                <p><input type="password" id="password1" placeholder="Enter your password"></p>
+                                <p><input type="password" id="password2" placeholder="Re-enter the password"></p>
+                                <p><input type="submit" value="Sign Up" id="submit"></p>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
