[Finishes #162189997] Update the report status on the user profile page and the home page

--- a/UI/home.html
+++ b/UI/home.html
@@ -35,7 +35,7 @@
                     <div class="main-search-content-type">
                         <div class="home-report-type">
                             <p>RED-FLAG</p>
-                            <p>STATUS: UNRESOLVED</p>
+                            <p>STATUS: UNDER INVESTIGATION</p>
                         </div>
                     </div>
                     <div class="main-search-content-description">
@@ -61,7 +61,7 @@
                     <div class="main-search-content-type">
                         <div class="home-report-type">
                             <p>INTERVENTION</p>
-                            <p>STATUS: ACCEPTED</p>
+                            <p>STATUS: RESOLVED</p>
                         </div>
                     </div>
                     <div class="main-search-content-description">
