--- a/UI/user-profile.html
+++ b/UI/user-profile.html
@@ -34,13 +34,13 @@
             </div>
             <div class="report-statistics-labels">
                 <div class="report-label">
-                    <p><strong>GREEN - ACCEPTED</strong></p>
+                    <p><strong>GREEN: RESOLVED</strong></p>
                 </div>
                 <div class="report-label">
-                    <p><strong>ORANGE - UNRESOLVED</strong></p>
+                    <p><strong>ORANGE: UNDER INVESTIGATION</strong></p>
                 </div>
                 <div class="report-label">
-                    <p><strong>RED - REJECTED</strong></p>
+                    <p><strong>RED: REJECTED</strong></p>
                 </div>
             </div>
             <div class="main-search">
@@ -48,7 +48,7 @@
                     <div class="main-search-content-type">
                         <div class="home-report-type">
                             <p>RED-FLAG</p>
-                            <p>STATUS: UNRESOLVED</p>
+                            <p>STATUS: UNDER INVESTIGATION</p>
                         </div>
                     </div>
                     <div class="main-search-content-description">
@@ -85,7 +85,7 @@
                     <div class="main-search-content-type">
                         <div class="home-report-type">
                             <p>INTERVENTION</p>
-                            <p>STATUS: ACCEPTED</p>
+                            <p>STATUS: RESOLVED</p>
                         </div>
                     </div>
                     <div class="main-search-content-description">
