[Finishes #162192493] Update the mission statement

--- a/UI/index.html
+++ b/UI/index.html
@@ -25,11 +25,12 @@
                     <p>
                         <strong>
                             <em>
-                                Spotted any corruption incidence or have a need for 
-                                an issue to be addressed raise? Look no further since 
-                                iReporter is here to help you. 
-                                With our help you can raise a red-flag or call for 
-                                an intervention to a government agency to respond to an issue.
+                                Spotted any corruption related incidence or have a need for 
+                                an issue to be addressed? Look no further since iReporter is 
+                                here to help you.  With our help you can raise a red-flag on 
+                                matters relating to corruption or call for an intervention to 
+                                a government agency on issues such as bad roads sections, 
+                                collapsed bridges, flooding etc.
                             </em>
                         </strong>
                     </p>
